# fast-duno

./: .coverage  .gitignore  Dockerfile  README.md  database.db  docker-compose.yaml  entrypoint.sh  pyproject.toml  tool_taskipy.txt
.github/workflows/: pipeline.yaml
fast_duno/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_duno/routes/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 23ebb2464fc6_create_table_users.py  2e35353cdfb2_create_todos_table.py  537e12fd3a5f_crete_todos_table.py  9e940d0bba69_create_todos_table.py  b459746a2760_create_users_table.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
