[tool.poetry]
name = "fast-duno"
version = "0.1.0"
description = "A tiny project to study "
authors = ["Armando Solheiro <avgsolheiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
taskipy = "^1.12.2"
ignr = "^2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.1.7"
httpx = "^0.25.2"
isort = "^5.13.1"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff' 
format = 'blue . && isort .'
run = 'uvicorn fast_duno.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_duno -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
